--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     
     <div id="envelope-container">
         <img src="envelope.gif" alt="Envelope" id="envelope" />
-        <p>♡ Letter for You ♡</p>
+        <p>♡ Γράμμα για την όμορφη Βέρα Πρέντι ♡</p>
     </div>
 
     <div id="letter-container">
         <div class="letter-window">
-            <h1 id="letter-title">Will you be my Valentine?</h1>
+            <h1 id="letter-title">Θα γίνεις η βαλεντίνα μου?</h1>
 
             <img src="happy_kitty.jpg" class="cat" id="letter-cat" />
 
@@ -32,7 +32,7 @@
             </div>
 
             <p id="final-text" class="final-text" style="display: none">
-                <strong>Valentine Date:</strong> Meow Restaurant at 7pm. Dress fancy!
+                <strong>Ραντεβού Βαλεντίνου</strong> Εστιατόριο Γατοθλ Μιαουυ στις 7 μ.μ. Ντυσού φανταχτερά!
             </p>
         </div>
     </div>
